I have changed the method names to make them shorter; other information is clear from the arguments and return objects